2018-06-04  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Fix sscanf() string format

	* tools/trietool.c (prepare_trie):
	  - Define b, e as unsigned int, as required by "%x" format.
	    Fixing warning from '-Wformat=' gcc option.

2018-06-04  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Fix compiler warnings in tests

	* tests/test_byte_alpha.c (main):
	* tests/test_file.c (main):
	* tests/test_iterator.c (main):
	* tests/test_nonalpha.c (main):
	* tests/test_null_trie.c (main):
	* tests/test_store-retrieve.c (main):
	* tests/test_term_state.c (main):
	* tests/test_walk.c (main):
	  - Declare main function with 'main (void)'.
	    Fixing warning from '-Wstrict-prototypes' gcc option.
	* tests/test_walk.c (main):
	  - Split long string, which required C90 compilers.
	    Fixing warning from '-Woverlength-strings' gcc option.

2018-06-04  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Duplicate TrieChar string in more portable manner

	* datrie/tail.c (tail_set_suffix, +tc_strdup, +tc_strlen):
	  - Replace cast strdup() with crafted implementation,
	    allowing TrieChar to be of larger size than char.
	    Fixing warning from '-Wint-to-pointer-cast' gcc option.

2018-06-04  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Split long string

	* tools/trietool.c (usage):
	  - Split help message which was too long and required C90 compiler.
	    Caught by '-Woverlength-strings' gcc option.

2018-06-04  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Remove unused byte, word, dword typedefs

	These are likely to conflict with other uses.

	* datrie/typedefs.h (-byte, -word, -dword):
	  - Remove the unused typedefs

	Thanks Peter Moulder for the patch.

2018-06-04  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Rename TRUE/FALSE in Bool enum to avoid clash

	Some other header file may have already define TRUE/FALSE.

	* datrie/typedefs.h (Bool):
	  - Rename FALSE, TRUE to DA_FALSE, DA_TRUE respectively,